WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285404
Assertion when using any of the following units with canvas ctx.letterSpacing/ctx.wordSpacing: lh, rlh, cqw, cqh, cqi, cqb, cqmin, cqmax
https://bugs.webkit.org/show_bug.cgi?id=285404
Summary
Assertion when using any of the following units with canvas ctx.letterSpacing...
Sam Weinig
Reported
2025-01-05 13:16:34 PST
WebKit will assert when using any of the following units with canvas ctx.letterSpacing/wordSpacing (lh, rlh, cqw, cqh, cqi, cqb, cqmin, cqmax).
Attachments
Test case (will assert in debug builds)
(810 bytes, text/html)
2025-01-05 13:41 PST
,
Sam Weinig
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2025-01-05 13:41:04 PST
The HTML spec doesn't say what these units (or really any <length> units) should do, so for now, just going to make non-absolute and non-font-relative units bail. Filed
https://github.com/whatwg/html/issues/10893
for HTML spec issue.
Sam Weinig
Comment 2
2025-01-05 13:41:51 PST
Created
attachment 473783
[details]
Test case (will assert in debug builds)
Sam Weinig
Comment 3
2025-01-05 13:59:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38547
EWS
Comment 4
2025-01-06 09:04:16 PST
Committed
288468@main
(ddefac0cb41f): <
https://commits.webkit.org/288468@main
> Reviewed commits have been landed. Closing PR #38547 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2025-01-06 09:05:15 PST
<
rdar://problem/142420240
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug