Assertion when using non-absolute / non-font-relative units in ctx.letterSpacing/ctx.wordSpacing https://bugs.webkit.org/show_bug.cgi?id=285404

Reviewed by Darin Adler.

Fixes a debug only assertion when setting ctx.letterSpacing/ctx.wordSpacing
to non-absolute / non-font-relative units in the length passed in.

* LayoutTests/fast/canvas/canvas-letterSpacing-wordSpacing-units-expected.txt: Added.
* LayoutTests/fast/canvas/canvas-letterSpacing-wordSpacing-units.html: Added.
    - Adds test that setting letterSpacing / wordSpacing doesn't crash for any unit.

* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::unitAllowedForSpacing):
(WebCore::CanvasRenderingContext2DBase::setLetterSpacing):
(WebCore::CanvasRenderingContext2DBase::setWordSpacing):
    - Add check for supported units.

Canonical link: https://commits.webkit.org/288468@main